Adjusted card styling, added glow effect when hovering, added average cost per game, fixed card image height differences, adjusted game titles to cutoff. Added more detailed loading messages when searching for user accounts.

--- a/age/app/globals.css
+++ b/age/app/globals.css
@@ -11,12 +11,6 @@ body {
   font-family: sans-serif;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(255, 255, 255);
-  border-radius: 0.75rem;
+:root {
+  color-scheme: dark;
 }
